hello-server.deployment.begin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-server
  namespace: vincent
  labels:
    app: hello-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-server
    spec:
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        name: hello-app
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
